syntax = "proto3";

package gomoku;

message ActorConfig {
  message Item {
    string key = 1;
    // Exactly one of these fields should be set.
    string string = 2;
    float floating = 3;
    int32 integer = 4;
  }
  // Key-value pairs.
  repeated Item item = 1;
}

message ActorSpec {
  // Unique name of the actor.
  string name = 1;
  // Type of the actor.
  string type = 2;
  // Configuration. Depends on the actor.
  ActorConfig config = 3;
}
